--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <img src="https://res.cloudinary.com/deiqv8neq/image/upload/v1745841538/Caleb_Cover_Photo_ocgjia.png" alt="Caleb Mwaniki" class="profile-img">
                         </div>
                         <h1 data-text="Caleb Mwaniki">Caleb Mwaniki</h1>
-                        <p class="subtitle">Application for Vendor Management Position at Concentrix</p>
+                        <p class="subtitle">Application for Vendor Management Position at Your Organization</p>
                     </div>
 
                     <div class="letter-content">
@@ -97,7 +97,7 @@
                             </ul>
 
                             <p class="letter-paragraph">
-                                What excites me about Concentrix is your commitment to scaling high-trust vendor partnerships. My blend of customer support insight, vendor process design, and technical execution aligns with your mission to transform vendor management into a strategic advantage.
+                                What excites me about your company is your commitment to scaling high-trust vendor partnerships. My blend of customer support insight, vendor process design, and technical execution aligns with your mission to transform vendor management into a strategic advantage.
                             </p>
 
                             <div class="signature">
