update on cover letter

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <img src="https://res.cloudinary.com/deiqv8neq/image/upload/v1745841538/Caleb_Cover_Photo_ocgjia.png" alt="Caleb Mwaniki" class="profile-img">
                         </div>
                         <h1 data-text="Caleb Mwaniki">Caleb Mwaniki</h1>
-                        <p class="subtitle">Application for Vendor Management Position at Your Organization</p>
+                        <p class="subtitle">Application for Vendor Management / Customer Support Position at Your Organization</p>
                     </div>
 
                     <div class="letter-content">
